--- a/game/src/components/template/index.html
+++ b/game/src/components/template/index.html
@@ -5,7 +5,7 @@
 		<title>CasAnimale</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="src/index.css" />
+		<link rel="stylesheet" href="index.css" />
 		<!-- <noscript><link rel="stylesheet" href="css/noscript.css" /></noscript> -->
 	</head>
 	<body class="is-preload">
@@ -233,11 +233,11 @@
 			</div>
 
 		<!-- Scripts -->
-			<script src="src/js/jquery.min.js"></script>
-			<script src="src/js/browser.min.js"></script>
-			<script src="src/js/breakpoints.min.js"></script>
-			<script src="src/js/util.js"></script>
-			<script src="src/js/main.js"></script>
+			<script src="js/jquery.min.js"></script>
+			<script src="js/browser.min.js"></script>
+			<script src="js/breakpoints.min.js"></script>
+			<script src="js/util.js"></script>
+			<script src="js/main.js"></script>
 
 	</body>
 </html>
