--- a/client/front-office/src/index.css
+++ b/client/front-office/src/index.css
@@ -1,6 +1,7 @@
 html, body, #root {
-    display: flex;
+    /*display: flex;
     flex: 1 0 auto;
+    */
     height: 100%;
-    width: 100%;
+    /*width: 100%;*/
 }
